[gd_scene format=3 uid="uid://b71gsf1lhvmn8"]

[ext_resource type="Script" uid="uid://b5urpraklylao" path="res://scripts/ui/shelter_erosion_panel.gd" id="1_shelter"]
[ext_resource type="Script" uid="uid://fiuvru7ik5f8" path="res://scripts/ui/erosion_cycle_bar.gd" id="2_cycle_bar"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_transparent"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_popup"]
bg_color = Color(0.1, 0.12, 0.18, 0.98)
corner_radius = 6
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.35, 0.38, 0.45, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.1, 0.14, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.28, 0.35, 0.8)

[node name="ShelterErosionPanel" type="HBoxContainer" unique_id=272129604]
theme_override_constants/separation = 12
script = ExtResource("1_shelter")

[node name="Left" type="PanelContainer" parent="." unique_id=1166838319]
layout_mode = 2
custom_minimum_size = Vector2(90, 36)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_transparent")

[node name="LeftVBox" type="VBoxContainer" parent="Left" unique_id=618646770]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="Left/LeftVBox" unique_id=291740032]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.6, 0.65, 0.75, 1)
theme_override_font_sizes/font_size = 11
text = "庇护 · 侵蚀"

[node name="ErosionLabel" type="Label" parent="Left/LeftVBox" unique_id=2031932069]
layout_mode = 2
mouse_filter = 0
theme_override_colors/font_color = Color(0.9, 0.85, 0.75, 1)
theme_override_font_sizes/font_size = 14
text = "薄弱"

[node name="ErosionSourcePopup" type="PanelContainer" parent="Left/LeftVBox" unique_id=1117348999]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="Margin" type="MarginContainer" parent="Left/LeftVBox/ErosionSourcePopup" unique_id=237084907]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="SourceLabel" type="Label" parent="Left/LeftVBox/ErosionSourcePopup/Margin" unique_id=1868060553]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.88, 0.92, 1)
theme_override_font_sizes/font_size = 24
text = "当前：0 轻度侵蚀
-2 来自显性侵蚀
+2 来自文明的庇佑"

[node name="Right" type="PanelContainer" parent="." unique_id=1279295278]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "未来3个月侵蚀：白色+1隐性、翠绿0轻度、橙黄-2显性、赤红-4涌动阴霾、深紫-8莱卡昂"
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="BarMargin" type="MarginContainer" parent="Right" unique_id=993994066]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 4

[node name="ErosionCycleBar" type="Control" parent="Right/BarMargin" unique_id=487934224]
custom_minimum_size = Vector2(200, 28)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_cycle_bar")

[node name="CycleBarPopup" type="PanelContainer" parent="Right/BarMargin"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_popup")

[node name="Margin" type="MarginContainer" parent="Right/BarMargin/CycleBarPopup"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="CycleBarLabel" type="Label" parent="Right/BarMargin/CycleBarPopup/Margin"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.88, 0.92, 1)
theme_override_font_sizes/font_size = 24
text = "距离现在24天 显性侵蚀 -2"
